# adventofcode

2018/python/Day01/: 1-1.py
2018/python/Day02/: 2-1.py  2-2.py
2018/python/Day03/: 3-2.py
2018/python/Day04/: 4-2.py
2018/python/Day06/: 6-1.py  6-2.py
2018/python/Day07/: 7-1.py  7-2.py
2019/python/: README.md
2019/python/Day1/: 1-1.py  1-2.py  final.py  test_day1.py
2019/python/Day10/: 10-1.py  (+1 more)
2020/python/: Day_README.md.j2  README.md
2021/python/: Day_README.md.j2  README.md  create_day_readme.py
2022/python/: README.md  YEAR_README.md.j2  create_day_readme.py  create_year_readme.py  day_setup.sh  script_template.py
2023/python/: README.md  YEAR_README.md.j2  create_year_readme.py  day_setup.sh  requirements.txt  script_template.py
2024/python/: README.md  YEAR_README.md.j2  create_day_readme.py  create_year_readme.py  day_setup.sh  pyproject.toml  script_template.py
2024/python/Day01/: 1-1.py  1-2.py  Day 1 - Advent of Code 2024.html  README.md
2024/python/Day02/: 2-1.py  2-2.py  Day 2 - Advent of Code 2024.html  README.md
2024/python/Day03/: 3-1.py  3-2.py  Day 3 - Advent of Code 2024.html  README.md
2024/python/Day04/: 4-1.py  4-2.py  Day 4 - Advent of Code 2024.html  README.md
2024/python/Day05/: 5-1.py  5-2.py  Day 5 - Advent of Code 2024.html  README.md
2024/python/Day06/: 6-1.py  6-2.py  Day 6 - Advent of Code 2024.html  README.md
2024/python/Day07/: 7-1.py  7-2.py  Day 7 - Advent of Code 2024.html  README.md
Day01/: 1-1.py  1-2.py
Day03/: 3-1.py
Day04/: 4-1.py
Day05/: 5-1.py  5-2.py
Day06/: 6-2.py
Day07/: 7-1.py
(+244 files in other folders)
