[tool.poetry]
name = "adventofcode-2024"
version = "0.1.0"
description = ""
authors = ["Eddy Hintze <eddy@gitx.codes>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
parsel = "^1.9.1"
jinja2 = "^3.1.4"
html2text = "^2024.2.26"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
